assets/css/style.css
/* ---------------------------------------- FONTS */

@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed|Exo|Halant|Roboto:100,200,300,400,500,600,700,800,900&display=swap');

.text-uppercase {
    text-transform: uppercase;
}
.white-font {
    color: rgba(255, 255, 255, 1);

}
section {
    font-family: "Barlow condensed", "Roboto", sans-serif;
    color: rgba(255, 255, 255, 1);
}

.home-page {
    color: black;
}

h1 {
    font-weight: 700;
}

h1, h2, h3, {
    letter-spacing: 6px;
}

h4 {
    font-size: 1.2rem;
    letter-spacing: 3px;
}

/* ---------------------------------------- BACKGROUND IMAGE / COLOR AND SIZE*/

.monkees-bg {
    background: url("../images/monkees-together.gif");
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    background-repeat: no-repeat;
    width: 100%;
    height: 100vh;
    position: relative;
}

.dark-bg {
    /* Found how to darker the bg-img through this link https://stackoverflow.com/questions/26621513/darken-css-background-image */
    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url("../images/dark-background.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100%;
}

.main-container-home {
    /* height: calc(100vh - 58px);
    height: 50vh; */
    /* margin-top: 58px; */
}

.main-container {
    margin-top: 58px;
}

.main-container-video {
    padding-right: 0;
    padding-left: 0;
}

/* ---------------------------------------- BUTTONS */

/* NAVBAR BUTTONS */

.navbar-toggler {
    border: 0;
}

/*  Page Buttons */

.btn-font {
    color: rgba(255,255,255,.75);
    letter-spacing: 2px;
}

.btn-font:hover {
    color: rgba(255,255,255, 1);
}

/* ---------------------------------------- HEADERS */

/* Hover underline added to have a better UX. */

.underline-hover>a {
    position: relative; /* position changed for the underline position */
}

.underline-hover>a:after {
    content: "";
    display: block;
    height: 2px;
    left: 50%;
    position: absolute;
    background: #fff;
    transition: width 0.3s ease 0s, left 0.3s ease 0s;
    width: 0;
}

.underline-hover>a:hover:after {
    width: 100%;
    left: 0;
}

/* ---------------------------------------- SECTION */

/* Top and Bottom Space Title All Page */
.main-title {
    padding-top: 38px;
    padding-bottom: 38px;
}

/*  Block Divider Line */

.block-divider {
    height: 5px;
    background-color: #f4f4f4;
    width: 35px;
    border: 0;
}
/* ---------------------  VIDEO PAGE */

/* ---- VIDEO PART */

.video-responsive {
    overflow: hidden;
    padding-bottom: 56.25%;
    position: relative;
    height: 0;
    /* margin-bottom: 7%; */
    margin-top: 15px;
}

.video-responsive iframe {
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    position: absolute;
}

/* Button space in the column in the video page*/
/* Need space at the bottom */
.button-column {
    margin-bottom: 38px;
}
/* Need little bit space on the top */
.first-video-container .button-column {
    padding-top: .5rem;
}

/* --------------------- Music PAGE */

/* Column Audio Space */

.col-audio {
    margin-bottom: 50px;
}

/* Music Image Title Space */

.music-content h4 {
    margin-top: 15px;
    margin-bottom: 15px;
}

/* ---- Audio Player */
/* Size and Space */
.music-player {
    width: 90%;
    margin-top: 15px;
}

/* All the img */
.img-size {
    height: 270px;
    width: 85%;
}

/* ---- Buttons */
/* Space between content and Style */

.music-content .btn{
    margin-top: 15px;
    border-radius: 25px;
}

/*---- Spotify Playlist */
/* Size */

.spotify-playlist {
    height: 100%;
}

/*---- Modals */
/* Remove the visible border */

.no-top-border {
    border-top: 0;
}

.no-bottom-border {
    border-bottom: 0;
}
/* ---------------------------------------- FOOTER */

footer {
    height: 58px;
}

/* SOCIAL ICON space between them*/

.social-icon {
    margin: 15px;
}

/* ---------------------------------------- ICON FONT AWESOME */

/* ICON in the title remove pointer cause of fa hover */

h1>.icon-title {
    color: inherit;
    pointer-events: none;
    /* Give some space between the icon and the title */
    margin-right: 5px;
}

/* Icon in the audio page album image */

.fa-long-arrow-right {
    pointer-events: none;
    margin-left: 15px;
}

/*------ ICONS Footer */

.fa {
    color: #f4f4f4;
    transition: all .2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    /* Firefox */
    -webkit-transition: all 0.2s ease-in-out;
    /* Safari & Chrome */
    -o-transition: all 0.2s ease-in-out;
    /* Opera */
    -ms-transition: all 0.2s ease-in-out;
    /* Internet Explorer */
}

/* Hover added to add a better UX.*/

.fa:hover {
    transform: scale(1.3);
}

.fa-facebook-square:hover {
    color: #3b5998;
}

.fa-twitter:hover {
    color: #1da1f2;
}

.fa-youtube:hover {
    color: #e31010;
}

/*---------------------- SHADOW EFFECTS ICON*/

/* ICON in the footer */

.icon-shadow {
    text-shadow: 5px 5px rgba(0, 0, 0, 0.4);
}

/* ---------------------------------------- MEDIA QUERIES */

@media screen and (min-width: 768px) {
    /* Video Page */
    /* Need little bit space on the top */
    .second-video-container .button-column, .third-video-container .button-column {
        padding-top: .5rem;
    }

    /* Audio Page */

    .img-size {
        height: 263px;
    }

}

/* Desktop and Full Screen */
@media screen and (min-width: 992px) {
    /* Video Page */
    /* Reducing the size of the youtube video */
    .video-responsive {
        padding-bottom: 35%;
    }
}

/* ---------------------------------------- check the borders of the grid */

/* 
nav {
    border: 1px solid red;
}

div {
    border: 1px solid green;
}

ul {
    border: 1px solid yellow;
}

li {
    border: 1px dotted blue;
}

a {
    border: 1px dotted white;
}

i {
    border: 1px solid black;
} */

